wip; first exec with the improved model (string serialization of redicts still need more cleanup)